# Dice-Engine

./: CONTRIBUTING.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.antigravity/: ARCHITECTURE.md  CONSTRAINTS.md
.specify/features/v1.1.0-enhancements/: checklist.md  plan.md  spec.md  tasks.md
.specify/memory/: constitution.md
.specify/specs/030-exploding-dice/: plan.md  spec.md  tasks.md
.specify/specs/031-combat-sequence/: plan.md  spec.md  tasks.md
SETUP/: index.html
adr/001-python-language/: index.html
adr/002-precommit-required/: index.html
api/: index.html
contributing/: index.html
docs/: SETUP.md  api.md  contributing.md  entropy-proofs.md  getting-started.md  index.md
docs/adr/: 001-python-language.md
docs/proposals/: feat-007-dice-roll-verification.md
getting-started/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/SETUP/: index.html
site/adr/000-template/: index.html
site/adr/001-python-language/: index.html
site/adr/002-precommit-required/: index.html
site/api/: index.html
site/contributing/: index.html
site/entropy-proofs/: index.html
site/getting-started/: index.html
site/search/: search_index.json
