[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dice-engine"
version = "0.1.0"
description = "CSPRNG-backed dice roller with entropy proofs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/dice_engine"]

[tool.ruff]
line-length = 88
target-version = "py310"
